added double quotes on inputs

--- a/Feb12NotWorking/index.html
+++ b/Feb12NotWorking/index.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="APImain.css">
     <title>Document</title>
 </head>
 
 <!-- <body background="assets/rockGuitarOnStage.jpg" repeat="none"   > -->
-<body>
+<body >
 
-    <!-- <div class="backgroundImage"><img id="backImg" src="assets/rockGuitarOnStage.jpg"></div> -->
+    <!-- <div class="backgroundImage"><img id="backImg" src="assets/rockGuitarOnStage.jpg"> -->
+    <div class="backgroundImage">
 
     <form>
         <p>Several ways to find your song tabs.</p>
@@ -40,6 +41,8 @@
 
     </section>
 
+</div>
+
     <!-- <output name="tabSearchString" for="tabSearchString"></output> -->
 
     <!-- <input type="text" id="name" name="tabSearchString" pattern="search string" required minlength="2" maxlength="8" size="10"> -->
@@ -53,7 +56,7 @@
     <!-- <a href="http://www.songsterr.com/a/wa/song?id=289" target="tabButtonIframe">Show Tab</a>
     </div> --> 
 
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="APIscript.js"></script>
 </body>
 
 </html>
